fix datasets documentation mobile view

--- a/assets/css/responsive.scss
+++ b/assets/css/responsive.scss
@@ -44,20 +44,22 @@ $transition: 0.5s;
         width: 100% !important;
         &.left-aligned {
           justify-self: left !important;
-
         }
         &.normal-size {
           width: unset !important;
         }
       }
     }
-  } 
+  }
 }
-
 
 /* Max width 767px */
 @media only #{$media} and ($feature_max : $value_two) {
-
+  .swagger-docs {
+    .header {
+      display: none;
+    }
+  }
   .dataset {
     font-weight: 650 !important;
   }
@@ -127,18 +129,17 @@ $transition: 0.5s;
       padding-top: 15px;
       // justify-content: space-around !important;
 
-    &.justify-content-left-sm {
-      justify-content: left !important;
-    }
-    &.justify-content-left-xs {
-      justify-content: left !important;
-    }
+      &.justify-content-left-sm {
+        justify-content: left !important;
+      }
+      &.justify-content-left-xs {
+        justify-content: left !important;
+      }
       button {
         margin: 10px 0px 10px 0px !important;
         width: 100% !important;
         &.left-aligned {
           justify-self: left !important;
-
         }
         &.normal-size {
           width: unset !important;
@@ -1646,7 +1647,6 @@ $transition: 0.5s;
 
 /* Min width 576px to Max width 767px */
 @media only #{$media} and ($feature_min : $value_one) and ($feature_max : $value_two) {
-  
   .pb-md-50 {
     padding-bottom: 50px !important;
   }
